--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PACC – Clean Molecules Market‑Maker</title>
     <meta name="description" content="PACC is the trusted bridge between producers and customers of the energy transition—de‑risking supply, aggregating demand, and creating structured pathways for clean molecules.">
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="PACC – Pioneering Clean Molecules Market‑Maker">
+    <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. De‑risking supply, aggregating demand, and creating structured pathways for clean molecules.">
+    <meta property="og:image" content="/favicon.png">
+    <meta property="og:url" content="https://pacc.tech">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="PACC">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PACC – Clean Molecules Market‑Maker">
+    <meta name="twitter:description" content="Building the trusted bridge between producers and customers of the energy transition.">
+    <meta name="twitter:image" content="/favicon.png">
   </head>
   <body>
     <div id="app"></div>
