--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="PACC – Pioneering Clean Molecules Market‑Maker">
     <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. We de‑risk supply, aggregate demand, and create structured pathways for hydrogen and clean molecules. Join us in accelerating the clean energy future.">
-    <meta property="og:image" content="https://pacc.tech/og-logo.png">
+    <meta property="og:image" content="/og-logo.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="PACC - Clean Molecules Market Maker with Golden Gate Bridge">
