--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="PACC – Pioneering Clean Molecules Market‑Maker">
     <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. We de‑risk supply, aggregate demand, and create structured pathways for hydrogen and clean molecules. Join us in accelerating the clean energy future.">
-    <meta property="og:image" content="https://pacc.tech/assets/logo_full-BJVEYx9I.png">
+    <meta property="og:image" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="PACC - Clean Molecules Market Maker with Golden Gate Bridge">
-    <meta property="og:url" content="https://pacc.tech">
+    <meta property="og:url" content="https://pacc.services">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PACC">
     <meta property="og:locale" content="en_US">
@@ -31,19 +31,19 @@
     <meta name="twitter:creator" content="@PACC">
     <meta name="twitter:title" content="PACC – Clean Molecules Market‑Maker">
     <meta name="twitter:description" content="Building the trusted bridge for hydrogen & clean energy. De‑risking supply, aggregating demand, creating the future of energy transition.">
-    <meta name="twitter:image" content="https://pacc.tech/assets/logo_full-BJVEYx9I.png">
+    <meta name="twitter:image" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
     <meta name="twitter:image:alt" content="PACC - Clean Molecules Market Maker">
     
     <!-- Additional Meta Tags -->
-    <meta property="article:publisher" content="https://pacc.tech">
+    <meta property="article:publisher" content="https://pacc.services">
     <meta property="business:contact_data:street_address" content="">
     <meta property="business:contact_data:locality" content="San Francisco">
     <meta property="business:contact_data:region" content="CA">
     <meta property="business:contact_data:country_name" content="United States">
-    <meta property="business:contact_data:email" content="info@pacc.tech">
+    <meta property="business:contact_data:email" content="pat@pacc.services">
     
     <!-- LinkedIn Meta Tags -->
-    <meta property="og:image:secure_url" content="https://pacc.tech/assets/logo_full-BJVEYx9I.png">
+    <meta property="og:image:secure_url" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
     <meta name="linkedin:owner" content="PACC">
   </head>
   <body>
