Update meta tags for PACC branding

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
     <meta name="theme-color" content="#00497a">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PACC – Clean Molecules Market‑Maker | Hydrogen & Energy Transition</title>
-    <meta name="description" content="PACC is the trusted bridge between producers and customers of the energy transition—de‑risking supply, aggregating demand, and creating structured pathways for clean molecules including hydrogen and specialty gases.">
-    <meta name="keywords" content="hydrogen, clean energy, energy transition, clean molecules, market maker, hydrogen trading, specialty gases, sustainable energy, PACC">
+    <title>PACC – Molecules Market‑Maker | Hydrogen & Energy Transition</title>
+    <meta name="description" content="PACC is the trusted bridge between producers and customers of the energy transition—de‑risking supply, aggregating demand, and creating structured pathways for molecules including hydrogen and specialty gases.">
+    <meta name="keywords" content="hydrogen, energy transition, molecules, market maker, hydrogen trading, specialty gases, sustainable energy, PACC">
     <meta name="author" content="PACC">
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="PACC – Pioneering Clean Molecules Market‑Maker">
+    <meta property="og:title" content="PACC – Molecules Market‑Maker">
     <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. We de‑risk supply, aggregate demand, and create structured pathways for hydrogen and clean molecules. Join us in accelerating the clean energy future.">
     <meta property="og:image" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:image:alt" content="PACC - Clean Molecules Market Maker with Golden Gate Bridge">
+    <meta property="og:image:alt" content="PACC - Molecules Market Maker with Golden Gate Bridge">
     <meta property="og:url" content="https://pacc.services">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PACC">
@@ -29,10 +29,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@PACC">
     <meta name="twitter:creator" content="@PACC">
-    <meta name="twitter:title" content="PACC – Clean Molecules Market‑Maker">
+    <meta name="twitter:title" content="PACC – Molecules Market‑Maker">
     <meta name="twitter:description" content="Building the trusted bridge for hydrogen & clean energy. De‑risking supply, aggregating demand, creating the future of energy transition.">
     <meta name="twitter:image" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
-    <meta name="twitter:image:alt" content="PACC - Clean Molecules Market Maker">
+    <meta name="twitter:image:alt" content="PACC - Molecules Market Maker">
     
     <!-- Additional Meta Tags -->
     <meta property="article:publisher" content="https://pacc.services">
