--- a/public/demo/mockup-03/index.html
+++ b/public/demo/mockup-03/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../shared/demo-nav.css" />
   </head>
   <body>
     <canvas id="radical-canvas"></canvas>
@@ -106,5 +107,6 @@
     <footer class="footer">Scroll-driven experience • © PACC Services</footer>
 
     <script type="module" src="main.js"></script>
+    <script src="../shared/demo-nav.js"></script>
   </body>
 </html>
