--- a/public/demo/mockup-04/index.html
+++ b/public/demo/mockup-04/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../shared/demo-nav.css" />
   </head>
   <body>
     <header class="nav">
@@ -72,20 +73,20 @@
                 <p>
                   Senior energy executive spanning hydrogen, industrial gases, and clean fuels with leadership roles at Uniper, Nikola, and Linde.
                 </p>
-                <a class="linkedin" href="https://www.linkedin.com/in/andrew-carman" target="_blank" rel="noreferrer">
+                <a class="linkedin" href="https://www.linkedin.com/in/andrew-carman">
                   <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
                   LinkedIn
                 </a>
               </div>
             </article>
             <article>
-              <img src="../shared/patrick.png" alt="Patrick Charette" />
+              <img src="../../data/exec-images/patrick.png" alt="Patrick Charette" />
               <div>
                 <h3>Patrick Charette — CCO</h3>
                 <p>
                   Energy executive and entrepreneur with leadership experience at BayoTech Hydrogen, Nikola, Linde, and Praxair.
                 </p>
-                <a class="linkedin" href="https://www.linkedin.com/in/patrick-charette" target="_blank" rel="noreferrer">
+                <a class="linkedin" href="https://www.linkedin.com/in/patrick-charette">
                   <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
                   LinkedIn
                 </a>
@@ -123,5 +124,6 @@
         </section>
       </div>
     </main>
+    <script src="../shared/demo-nav.js"></script>
   </body>
 </html>
