--- a/public/demo/mockup-05/index.html
+++ b/public/demo/mockup-05/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../shared/demo-nav.css" />
   </head>
   <body>
     <header class="nav">
@@ -83,18 +84,18 @@
             <div>
               <h3>Andrew Carman — CEO</h3>
               <p>Hydrogen veteran with leadership experience at Uniper, Nikola, and Linde.</p>
-              <a class="linkedin" href="https://www.linkedin.com/in/andrew-carman" target="_blank" rel="noreferrer">
+              <a class="linkedin" href="https://www.linkedin.com/in/andrew-carman">
                 <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
                 LinkedIn
               </a>
             </div>
           </article>
           <article>
-            <img src="../shared/patrick.png" alt="Patrick Charette" />
+            <img src="../../data/exec-images/patrick.png" alt="Patrick Charette" />
             <div>
               <h3>Patrick Charette — CCO</h3>
               <p>Hydrogen and industrial gases executive with roles at BayoTech, Nikola, Linde, and Praxair.</p>
-              <a class="linkedin" href="https://www.linkedin.com/in/patrick-charette" target="_blank" rel="noreferrer">
+              <a class="linkedin" href="https://www.linkedin.com/in/patrick-charette">
                 <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
                 LinkedIn
               </a>
@@ -135,5 +136,6 @@
     </main>
 
     <script type="module" src="main.js"></script>
+    <script src="../shared/demo-nav.js"></script>
   </body>
 </html>
