--- a/public/demo/mockup-08/index.html
+++ b/public/demo/mockup-08/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../shared/demo-nav.css" />
   </head>
   <body>
     <header class="site-header">
@@ -132,7 +133,7 @@
             <p class="bio">Senior energy executive spanning hydrogen, industrial gases, and clean fuels with leadership roles at Uniper, Nikola, and Linde.</p>
           </article>
           <article class="founder-card">
-            <img src="../shared/patrick.png" alt="Patrick Lyons" />
+            <img src="../../data/exec-images/patrick.png" alt="Patrick Lyons" />
             <h3>Patrick Lyons</h3>
             <p class="title">COO & Co-Founder</p>
             <p class="bio">Energy logistics expert and former founder with deep experience in midstream operations and market development.</p>
@@ -150,5 +151,6 @@
     </section>
 
     <script type="module" src="main.js"></script>
+    <script src="../shared/demo-nav.js"></script>
   </body>
 </html>
