--- a/public/demo/mockup-09/index.html
+++ b/public/demo/mockup-09/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../shared/demo-nav.css" />
   </head>
   <body>
     <header class="site-header">
@@ -158,7 +159,7 @@
             <p class="description">Energy executive with deep hydrogen and industrial gas expertise from Uniper, Nikola, and Linde.</p>
           </article>
           <article class="team-card">
-            <img src="../shared/patrick.png" alt="Patrick Lyons" />
+            <img src="../../data/exec-images/patrick.png" alt="Patrick Lyons" />
             <h3>Patrick Lyons</h3>
             <p class="role">COO & Co-Founder</p>
             <p class="description">Logistics and operations expert focused on building scalable midstream infrastructure.</p>
@@ -176,5 +177,6 @@
     </section>
 
     <script type="module" src="main.js"></script>
+    <script src="../shared/demo-nav.js"></script>
   </body>
 </html>
