--- a/public/demo/mockup-02/index.html
+++ b/public/demo/mockup-02/index.html
@@ -17,23 +17,33 @@
       </a>
       <nav>
         <a href="#approach">Approach</a>
-        <a href="#problem">Problem</a>
+        <a href="#problem">Market</a>
+        <a href="#solution">Solution</a>
         <a href="#leadership">Leadership</a>
         <a href="#news">News</a>
-        <a href="#contact" class="cta">Talk to Us</a>
+        <a href="#contact">Contact</a>
       </nav>
     </header>
     <div id="hero" class="hero split">
       <div class="panel text">
         <p class="eyebrow">Hydrogen & specialty gases • Logistics • Market‑making</p>
-        <h1>Energy transition market‑maker</h1>
+        <h1>The bridge between molecule producers and customers</h1>
         <p class="lede">
           The bridge between molecule producers and customers. Our mission is to become the trusted bridge between producers and
           customers of the energy transition—delivering scale, certainty, and value across dislocated markets.
         </p>
         <div class="actions">
           <a class="btn" href="#contact">Talk to Us</a>
-          <a class="link" href="#approach">Our Approach</a>
+          <a class="link" href="#approach">How We Work</a>
+        </div>
+        <div class="hero-impact">
+          <h2>Our Impact</h2>
+          <p>PACC accelerates the commercialization of molecules by unlocking new markets, reducing risks to producers, and delivering a reliable supply to customers.</p>
+          <ul>
+            <li>Producer‑first mindset and aligned incentives</li>
+            <li>Structured offtake, credit support, and logistics optimization</li>
+            <li>Trust and reliability through disciplined, scalable execution</li>
+          </ul>
         </div>
       </div>
       <div class="panel visual">
@@ -66,7 +76,7 @@
           <li><strong>High Delivered Costs:</strong> Fragmented supply, complex logistics, unreliable delivery.</li>
           <li><strong>No Market‑Maker:</strong> Emerging markets lack a trusted intermediary to connect supply and demand.</li>
         </ul>
-        <div class="solution">
+        <div id="solution" class="solution">
           <h3>PACC Solution</h3>
           <p>PACC connects producers and customers, turning stranded molecules into scalable markets.</p>
           <ul class="list">
@@ -90,11 +100,25 @@
         <p class="eyebrow">Leadership Team</p>
         <div class="bios">
           <article>
-            <h3>Andrew Carman — CEO</h3>
+            <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
+              <img src="../shared/andrew.png" alt="Andrew Carman" style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover;" />
+              <div>
+                <h3>Andrew Carman</h3>
+                <p style="margin: 0; color: #64748b; font-weight: 600;">CEO</p>
+              </div>
+              <a href="https://www.linkedin.com/in/andrew-carman-mba-a086a5b" target="_blank" rel="noopener" style="margin-left: auto; color: var(--brand); text-decoration: none; font-weight: 600;">LinkedIn</a>
+            </div>
             <p>A senior energy executive with extensive experience in hydrogen, industrial gases, and clean fuels. At Uniper, executed the company's first global hydrogen deal, developed and implemented the North American hydrogen strategy, and built strategic relationships with leading players across the industry. Previously at Nikola, developed, led, and executed the hydrogen supply strategy to fuel the first commercial FCEV Class 8 trucks in North America, working across the full hydrogen value chain from production through distribution and dispensing. Spent over a decade at Linde in progressively senior commercial roles, ultimately leading the Western U.S. onsite business with full P&L responsibility exceeding $100 million.</p>
           </article>
           <article>
-            <h3>Patrick Charette — CCO</h3>
+            <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
+              <img src="../shared/patrick.png" alt="Patrick Charette" style="width: 52px; height: 52px; border-radius: 50%; object-fit: cover;" />
+              <div>
+                <h3>Patrick Charette</h3>
+                <p style="margin: 0; color: #64748b; font-weight: 600;">CCO</p>
+              </div>
+              <a href="https://www.linkedin.com/in/patrick-charette" target="_blank" rel="noopener" style="margin-left: auto; color: var(--brand); text-decoration: none; font-weight: 600;">LinkedIn</a>
+            </div>
             <p>An energy executive and entrepreneur with extensive leadership experience in hydrogen and industrial gases. As Head of Commercial at BayoTech Hydrogen, led all commercial activities, set strategy, and pioneered the launch of a hydrogen molecule trading and logistics company that integrated production, distribution, and third-party sourcing. At Nikola Corporation, expanded hydrogen fueling and infrastructure strategy while securing significant government and industry partnerships. Earlier leadership roles with Linde and Praxair built expertise in specialty gases and large-scale pipeline networks. A foundation as an airline captain instilled the operational discipline and decision-making under pressure that continue to shape an executive approach to scaling clean energy businesses.</p>
           </article>
         </div>
@@ -104,6 +128,7 @@
     <section id="news" class="split">
       <div class="panel text">
         <p class="eyebrow">News & Announcements</p>
+        <h2>Stay updated with the latest developments from PACC</h2>
         <div class="news">
           <article>
             <p class="meta">Press Release — January 15, 2025 • San Francisco, CA</p>
@@ -111,14 +136,34 @@
             <p>PACC today announced the launch of PACC Track, a groundbreaking real-time tracking system that provides unprecedented visibility into hydrogen trailer locations and status throughout the entire order processing lifecycle.</p>
           </article>
           <article>
-            <p class="meta">Press Release — November 20, 2024 • San Francisco, CA</p>
-            <h3>PACC Announces Strategic Partnership with GridStor to Accelerate Hydrogen Storage Solutions</h3>
-            <p>PACC today announced a strategic partnership with GridStor, a leading energy storage developer, to integrate advanced hydrogen storage capabilities into PACC's market-making platform, enabling more flexible and reliable hydrogen supply chains.</p>
+            <p class="meta">Press Release — December 4, 2024 • San Francisco, CA</p>
+            <h3>PACC Launches Revolutionary Hydrogen Market-Making Platform to Bridge Energy Transition Gap</h3>
+            <p>PACC, a pioneering hydrogen and specialty gases market-maker, today announced the official launch of its innovative platform designed to accelerate the energy transition by connecting molecule producers with enterprise customers at scale.</p>
           </article>
           <article>
-            <p class="meta">Award — July 18, 2024 • San Francisco, CA</p>
-            <h3>PACC Recognized as Top Hydrogen Innovation Company by Clean Energy Industry Association</h3>
-            <p>PACC today announced it has been recognized as a Top Hydrogen Innovation Company by the Clean Energy Industry Association, honoring the company's pioneering approach to building market infrastructure for the hydrogen economy.</p>
+            <p class="meta">Partnership — November 12, 2024 • San Francisco, CA</p>
+            <h3>PACC Partners with GridStor to Expand Hydrogen Storage Solutions</h3>
+            <p>PACC today announced a strategic partnership with GridStor, a leading energy storage developer, to expand hydrogen storage solutions and enhance supply chain reliability for customers across North America.</p>
+          </article>
+          <article>
+            <p class="meta">Press Release — October 8, 2024 • Houston, TX</p>
+            <h3>PACC Expands Operations to Texas, Establishing Regional Hub for Hydrogen Market-Making</h3>
+            <p>PACC today announced the expansion of its operations to Texas, establishing a regional hub in Houston to serve the rapidly growing hydrogen market in the Gulf Coast region, home to some of the nation's largest hydrogen production facilities.</p>
+          </article>
+          <article>
+            <p class="meta">Milestone — September 20, 2024 • San Francisco, CA</p>
+            <h3>PACC Processes Millionth Kilogram of Hydrogen, Demonstrating Market-Making Scale</h3>
+            <p>PACC today announced a significant milestone: processing its millionth kilogram of hydrogen, demonstrating the company's ability to scale market-making operations and serve enterprise customers at volume.</p>
+          </article>
+          <article>
+            <p class="meta">Funding — August 15, 2024 • San Francisco, CA</p>
+            <h3>PACC Secures Series A Funding to Accelerate Hydrogen Market Infrastructure</h3>
+            <p>PACC today announced the close of its Series A funding round, securing significant capital to accelerate the development of hydrogen market infrastructure and expand operations across North America.</p>
+          </article>
+          <article>
+            <p class="meta">Recognition — July 10, 2024 • San Francisco, CA</p>
+            <h3>PACC Named Top Innovator in Energy Transition by Industry Leaders</h3>
+            <p>PACC has been recognized as a top innovator in the energy transition by leading industry organizations, highlighting the company's role in advancing hydrogen market infrastructure.</p>
           </article>
         </div>
       </div>
@@ -139,7 +184,7 @@
       </div>
     </section>
 
-    <footer class="footer">© PACC Services — The bridge between molecule producers and customers.</footer>
+    <footer class="footer">© 2025 PACC. All rights reserved.</footer>
 
     <script type="module" src="main.js"></script>
     <script src="../shared/demo-nav.js"></script>
